Welcome screen z-index fix

--- a/src/styles/homeStyle/_homeStyle.scss
+++ b/src/styles/homeStyle/_homeStyle.scss
@@ -37,7 +37,6 @@
   padding: 8rem 0rem;
   display: flex;
   justify-content: center;
-  z-index: 1;
 }
 
 .welcome-wrapper {
@@ -125,7 +124,7 @@
   left: 8rem;
   display: flex;
   justify-content: flex-end;
-  z-index: 2;
+  z-index: 1;
   margin-right: 0.5rem;
 
   @include mediumWidth {
@@ -155,8 +154,6 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 5rem;
-  position: relative;
-  z-index: 1;
 }
 
 .request-wrapper {
@@ -173,7 +170,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 
   h2 {
     margin-bottom: 1rem;
